[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://3d/projects/buildings/blend_big_building_15_100.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/BuildingScript.gd" type="Script" id=3]

[node name="Building" type="Spatial"]
script = ExtResource( 3 )

[node name="blend_big_building_15_100" parent="." instance=ExtResource( 2 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )

[node name="BuildingNumberLabelFirst" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1504, 1.977, 0.01 )
text = "100"
font = ExtResource( 1 )

[node name="BuildingNumberLabelSecond" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39.1642, 1.977, 0.01 )
text = "801"
font = ExtResource( 1 )

[node name="BuildingNumberLabelThird" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64.1566, 1.977, 0.01 )
text = "801"
font = ExtResource( 1 )

[node name="BuildingNumberLabelFourth" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 89.1598, 1.977, 0.01 )
text = "801"
font = ExtResource( 1 )
